# libzdt

./: .clangd  .component_hash  .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml  zdt-protocol.md
.claude/: settings.local.json
include/: libzdt.h  zdt_can_driver.h  zdt_twai.h
src/: libzdt.c  zdt_can.c  zdt_can_twai.c  zdt_twai.c
test/: CMakeLists.txt  README.md  sdkconfig.defaults
test/main/: CMakeLists.txt  main.c
test_espidf/: CMakeLists.txt  README.md
test_espidf/main/: CMakeLists.txt  Kconfig.projbuild  test_main.c
